tests/NormalTests/paczka2/big_fuzzy/96355732.err
Error in line 3: 8ZOlHG S711 9,9
Error in line 7: vQIniCc S559 -1,1
Error in line 4: 8ZOlHG S613 21,2
Error in line 1: vQIniCc S559 94,8
Error in line 16: MmVynTvr S559 28,8
Error in line 31: 8ZOlHG A561 68,0
Error in line 36: 8ZOlHG S711 26,5
Error in line 37: 8ZOlHG S613 87,3
Error in line 29: vYVY S711 81,4
Error in line 67: vQIniCc S559 87,3
Error in line 76: MmVynTvr A561 87,3
Error in line 80: MmVynTvr S613 94,5
Error in line 66: S559 S711 43,2
Error in line 85: 8ZOlHG S711 86,1
Error in line 97: 8ZOlHG S613 81,6
Error in line 104: vQIniCc S711 34,6
Error in line 115: S559 S559 28,42
Error in line 118: vQIniCc S613 -2,2
Error in line 107: vYVY S711 282,6
Error in line 109: MmVynTvr A561 462,3
Error in line 123: rdChOtmjTI S559 40,5
Error in line 117: vQIniCc S613 90,8
Error in line 132: 8ZOlHG S559 82,5
Error in line 128: S559 S559 17,2
Error in line 139: vYVY S613 1,6
Error in line 166: MmVynTvr S711 49,4
Error in line 175: vQIniCc A561 43,7
Error in line 179: S559 S711 79,9
Error in line 188: S559 A561 96,7
Error in line 197: S559 S711 10,66
Error in line 187: vQIniCc S711 50,3
Error in line 191: S559 S711 2,3
Error in line 198: vQIniCc S559 83,7
Error in line 200: S559 S613 47,2
Error in line 204: S559 A561 87,1
Error in line 211: rdChOtmjTI S711 93,6
Error in line 221: MmVynTvr S711 76,9
Error in line 218: S559 S711 47,8
Error in line 226: p847l A561 220,8
Error in line 233: S559 A561 27,2
Error in line 229: MmVynTvr S613 39,8
Error in line 238: MmVynTvr S559 58,6
Error in line 236: p847l S613 3,8
Error in line 247: MmVynTvr S613 487,95
